--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   # Install Manet dependencies
   - pip install -r requirements.txt
   # Install test dependencies
-  - pip install pytest pytest-travis-fold
+  # - pip install pytest pytest-travis-fold
 # Run flake8, a Python code linter 
 # before_script:
 #  flake8 manet
